<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.timothyking.tcrecipe.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="91dp"
        android:layout_height="45dp"
        android:layout_marginEnd="16dp"
        android:onClick="searchRecipe"
        android:text="@string/search"
        app:layout_constraintBaseline_toBaselineOf="@+id/editSearch"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editSearch"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/search_ingredient"
        android:inputType="textCapWords"
        android:singleLine="true"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonSearch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkCarb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="4dp"
        android:text="@string/low_carb"
        android:onClick="onCheckboxClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSearch" />

    <CheckBox
        android:id="@+id/checkProtein"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:onClick="onCheckboxClicked"
        android:text="@string/high_protein"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/checkCarb"
        app:layout_constraintTop_toBottomOf="@+id/editSearch" />

    <CheckBox
        android:id="@+id/checkFat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="8dp"
        android:text="@string/low_fat"
        android:onClick="onCheckboxClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkCarb" />

    <CheckBox
        android:id="@+id/checkBal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:onClick="onCheckboxClicked"
        android:text="@string/balanced"
        app:layout_constraintStart_toStartOf="@+id/checkProtein"
        app:layout_constraintTop_toBottomOf="@+id/checkProtein" />

    <View
        android:id="@+id/divider"
        android:layout_width="395dp"
        android:layout_height="3dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkFat" />

    <ListView
        android:id="@+id/mainListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>